--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <h1 class="fade-in">Income Expense Calculator</h1>
         <div class="balance">
-            <h2>Balance: <span id="balance">$0.00</span></h2>
+            <h2>Balance: <span id="balance">Rs. 0.00</span></h2>
         </div>
         <div class="totals">
-            <div>Total Income: <span id="total-income">$0.00</span></div>
-            <div>Total Expenses: <span id="total-expenses">$0.00</span></div>
+            <div>Income: <span id="total-income">Rs. 0.00</span></div>
+            <div>Expenses: <span id="total-expenses">Rs. 0.00</span></div>
         </div>
         <div class="controls">
             <input type="text" id="description" placeholder="Description">
